      in as an overall login failure. (Fixes: #141).

  [ Ezra Bühler ]
  * New upstream version (4.0.1.1):
    - Fix auto-resume when session type is »Single Application«. (Fixes: #183).

  [ Ricardo Díaz Martín ]
  * New upstream version (4.0.1.1):
    - Fix detection of maximum screen area available for a session. (Fixes:
      #165).

  [ Otto Kjell ]
  * New upstream version (4.0.1.1):
    - Enable debug mode through cmd line parameter. (Fixes: #142).
    - Standardize output to stdout+stderr and make it parseable.

  [ Orion Poplawski ]
  * New upstream version (4.0.1.1):
    - Instead of using a hard-code DPI of 96, use local DPI settings for new
      sessions if not explicitly set in session profile (Fixes: #164).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 22 Mar 2013 23:21:11 +0100

x2goclient (4.0.1.0-0~x2go1) unstable; urgency=low

  [ Frédéric Motte ]
  * New upstream version (4.0.1.0):
    - Add French translation file.

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.0):
    - Launching parec to init pulseaudio input only on Windows.
    - Hide profilecard area on broker authentication.
    - Fix ONMainWindow layout in broker mode.
    - Set passphrase for key to reverse SSH connection.
      Fix closing client after getting passphrase (Fixes: #137)
    - Support for recent cygwin API on Windows.
    - Add checkbox for -noclipboardprimary argument for internal vcxsrv.

  [ Mike Gabriel ]
  * New upstream version (4.0.1.0):
    - Fix position shifts of broker login widget on repetetive authentication
      failures. (Fixes: #71).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 22 Mar 2013 23:15:45 +0100

x2goclient (4.0.0.4-0~x2go1) unstable; urgency=low

  [ Clemens Lang ]
  * New upstream version (4.0.0.4):
    - Add scripts and additional files for building X2Go Client
      disk images for Mac OS X. (Fixes: #131).

  [ Mike Gabriel ]
  * New upstream version (4.0.0.4):